--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "note-taker",
+  "name": "notetaker",
   "version": "1.0.0",
-  "description": "express full stack app",
+  "description": "Express full stack app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
